--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
         "test": "react-scripts test",
         "eject": "react-scripts eject",
         "lint": "eslint .",
-        "lint:fix": "eslint --fix",
+        "lint:fix": "eslint . --fix",
         "format": "prettier --write './**/*.{js,jsx,ts,tsx,css,md,json}' --config ./.prettierrc.json",
         "configure-husky": "npx husky install && npx husky add .husky/pre-commit \"npx --no-install lint-staged\"",
         "prepare": "husky install"
@@ -54,6 +54,7 @@
         "@typescript-eslint/eslint-plugin": "^5.42.0",
         "@typescript-eslint/parser": "^5.42.0",
         "autoprefixer": "^10.4.13",
+        "cntl": "^1.0.0",
         "eslint": "^8.26.0",
         "eslint-config-prettier": "^8.5.0",
         "eslint-config-standard-with-typescript": "^23.0.0",
@@ -61,6 +62,7 @@
         "eslint-plugin-n": "^15.4.0",
         "eslint-plugin-promise": "^6.1.1",
         "eslint-plugin-react": "^7.31.10",
+        "eslint-plugin-unused-imports": "^2.0.0",
         "husky": "^8.0.0",
         "lint-staged": "^13.0.3",
         "postcss": "^8.4.18",
