--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
     "name": "reminder-front",
     "version": "0.1.0",
     "private": true,
+    "homepage": "https://github.com/ksamoylov/reminder-front",
     "dependencies": {
         "@testing-library/jest-dom": "^5.16.5",
         "@testing-library/react": "^13.4.0",
@@ -11,6 +12,7 @@
         "@types/react": "^18.0.24",
         "@types/react-dom": "^18.0.8",
         "axios": "^1.1.3",
+        "gh-pages": "^4.0.0",
         "react": "^18.2.0",
         "react-calendar": "^3.9.0",
         "react-dom": "^18.2.0",
@@ -26,7 +28,9 @@
         "lint:fix": "eslint . --fix",
         "format": "prettier --write './**/*.{js,jsx,ts,tsx,css,md,json}' --config ./.prettierrc.json",
         "configure-husky": "npx husky install && npx husky add .husky/pre-commit \"npx --no-install lint-staged\"",
-        "prepare": "husky install"
+        "prepare": "husky install",
+        "predeploy": "npm run build",
+        "deploy": "gh-pages -d build"
     },
     "lint-staged": {
         "src/**/*.+(ts|tsx)": [
