--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "reminder-front",
     "version": "0.1.0",
     "private": true,
-    "homepage": "https://github.com/ksamoylov/reminder-front",
+    "homepage": "https://ksamoylov.github.io/reminder-front/",
     "dependencies": {
         "@testing-library/jest-dom": "^5.16.5",
         "@testing-library/react": "^13.4.0",
